# XAI_anomaly_detection

./: .gitignore  LICENSE  README.md
notebooks/: main.ipynb
xai_anomaly_detection/: README.md  setup.cfg  setup.py
xai_anomaly_detection/src/preprocessing/: config.py  preprocessing.py
xai_anomaly_detection/src/xai_anomaly_detection/: preprocessing.py
xai_anomaly_detection/src/xai_anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xai_anomaly_detection/src/xai_anomaly_detection/explanations/: brcg.py  lime.py  protodash.py  shap.py
xai_anomaly_detection/src/xai_anomaly_detection/model/: FCModel.py
xai_anomaly_detection/src/xai_anomaly_detection/preprocessing/: __init__.py  preprocessing.py
xai_anomaly_detection/tests/: test_model.py  test_preprocessing.py
