[aliases]
test = pytest

[metadata]
name = xai_anomaly_detection
version = 0.01
description = "Package for generating explainations for ML model trained on NSL-KDD data set"
long_description = file: README.md
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = true

[options.package_data]
* = *.txt

[options.packages.find]
where = src
