[aliases]
test = pytest

[metadata]
name = xai_anomaly_detection
version = 0.01
description = "Package for generating explainations for ML model trained on NSL-KDD data set"
long_description = file: README.md
license = MIT

[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    pandas
    numpy
    sklearn

[options.packages.find]
where = src

[options.package_data]
preprocessing.data =
    *.txt
